--- a/Content/grav_net.ipynb
+++ b/Content/grav_net.ipynb
@@ -345,7 +345,8 @@
    ],
    "source": [
     "# true gravity values at each node\n",
-    "g_true = g_ref + 200.*np.random.rand(N)\n",
+    "rng = np.random.default_rng(seed=78888880864342)\n",
+    "g_true = g_ref + 200.*rng.random(N)\n",
     "\n",
     "for gi in g_true:\n",
     "    print(gi)"
@@ -499,7 +500,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -513,9 +514,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
