--- a/Content/least_squares.ipynb
+++ b/Content/least_squares.ipynb
@@ -335,7 +335,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "is the gradient of $\\Phi(\\mathbf{p})$ ([equation 10](#eq10)). Maybe, it is time to review some mathematical stuff to go forward with our study. Please, take a look at the notebooks `review_math_XXX`."
+    "is the gradient of $\\Phi(\\mathbf{p})$ ([equation 10](#eq10)). Maybe, it is time to review some mathematical stuff to go forward with our study. Please, take a look at the notebooks `review_math_1`."
    ]
   },
   {
@@ -348,7 +348,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "source": [
     "<a id='eq14'></a>\n",
@@ -557,7 +560,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -571,9 +574,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
