--- a/Content/newton-cotes.ipynb
+++ b/Content/newton-cotes.ipynb
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +402,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "source": [
     "### Exercise"
@@ -437,6 +440,13 @@
    "source": [
     "Compute the abrupt temparature perturbation by using: i) the routine [scipy.special.erf](https://docs.scipy.org/doc/scipy-0.15.1/reference/generated/scipy.special.erf.html), ii) the function `comp_trapezoidal`, and iii) the function `comp_simpson` shown above. Compare the three computed temperature perturbations. Consider $\\lambda = 31.5576$ $m^{2}/\\text{year}$."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -455,9 +465,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
