--- a/Content/polynomial.ipynb
+++ b/Content/polynomial.ipynb
@@ -153,7 +153,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Example of the routine [`numpy.polynomial.polynomial.polyvander2d`](https://docs.scipy.org/doc/numpy-1.14.0/reference/generated/numpy.polynomial.polynomial.polyvander2d.html)"
+    "#### Example of the routine [`numpy.polynomial.polynomial.polyvander2d`](https://numpy.org/doc/stable/reference/generated/numpy.polynomial.polynomial.polyvander2d.html)"
    ]
   },
   {
@@ -255,7 +255,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -269,9 +269,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
