--- a/Content/weighted_least_squares.ipynb
+++ b/Content/weighted_least_squares.ipynb
@@ -31,7 +31,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's consider now that, for some reason, we want to give \"*less importance*\" for some observations $d_{i}$ in the observed data vector $\\mathbf{d}$ (equation 6, notebook `least_squares`). This \"*less importance*\" can be represented by pre-multiplying both sides of the linear system (equation 3, notebook `least_squares`) as follows:"
+    "Let's consider now that, for some reason, we want to give \"*less importance*\" for some observations $d_{i}$ in the observed data vector $\\mathbf{d}$ (equation 6, notebook `least_squares`). This \"*less importance*\" can be represented by pre-multiplying the linear system (equation 3, notebook `least_squares`) as follows:"
    ]
   },
   {
@@ -58,8 +58,8 @@
     "<a id='eq2'></a>\n",
     "$$\n",
     "\\mathbf{W}^{\\frac{1}{2}} = \\begin{cases}\n",
-    "w_{ii} = 1 \\: &, \\quad \\text{\"important\" observations } d_{i} \\\\\n",
-    "0 < w_{ii} < 1 \\: &, \\quad \\text{\"less important\" observations } d_{i}\n",
+    "w_{ii} = 1 \\: &, \\quad \\text{``important'' observations } d_{i} \\\\\n",
+    "0 < w_{ii} < 1 \\: &, \\quad \\text{``less important'' observations } d_{i}\n",
     "\\end{cases} \\quad . \\tag{2}\n",
     "$$"
    ]
@@ -132,7 +132,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "source": [
     "<a id='eq5'></a>\n",
@@ -267,7 +270,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -281,9 +284,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
